Fix menu z-indexes

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -459,7 +459,7 @@ body {
   position: fixed;
   right: 20px;
   top: 20px;
-  z-index: 9;
+  z-index: 888;
   height: 48px;
   width: 48px;
   background-color: rgba(79, 83, 98, 0.5);
