--- a/src/scss/modules/_menu-button.scss
+++ b/src/scss/modules/_menu-button.scss
@@ -3,7 +3,7 @@
     position: fixed;
     right: 20px;
     top: 20px;
-    z-index: 9;
+    z-index: 888;
 
     // box model
     height: 48px;
